Initialize emotion detection and chatbot

--- a/payapa.android/gradle/libs.versions.toml
+++ b/payapa.android/gradle/libs.versions.toml
@@ -1,5 +1,13 @@
 [versions]
-agp = "8.5.0"
+agp = "8.7.1"
+androidxCameraLifecycle = "1.0.2"
+androidxCameraView = "1.0.0-alpha28"
+androidxCameraViewVersion = "1.1.0-alpha05"
+cameraCamera2 = "1.0.2"
+cameraLifecycleVersion = "1.1.0-alpha05"
+cameraViewVersion = "1.0.0-alpha32"
+glide = "4.16.0"
+guava = "32.1.2-jre"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
@@ -14,8 +22,24 @@ firebaseDatabase = "21.0.0"
 firebaseAuth = "23.0.0"
 firebaseFirestore = "25.0.0"
 firebaseStorage = "21.0.0"
+pytorch_android_torchvision_lite = "1.12.2"
+webkit = "1.12.1"
+cameraView = "1.3.4"
+cameraLifecycle = "1.3.4"
+firebaseCrashlyticsBuildtools = "3.0.2"
 
 [libraries]
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraLifecycleVersion" }
+androidx-camera-camera2-v102 = { module = "androidx.camera:camera-camera2", version.ref = "cameraCamera2" }
+androidx-camera-core = { module = "androidx.camera:camera-core", version.ref = "cameraLifecycleVersion" }
+androidx-camera-lifecycle-v102 = { module = "androidx.camera:camera-lifecycle", version.ref = "androidxCameraLifecycle" }
+androidx-camera-view-v100alpha28 = { module = "androidx.camera:camera-view", version.ref = "androidxCameraView" }
+androidx-camera-view-v110alpha05 = { module = "androidx.camera:camera-view", version.ref = "androidxCameraViewVersion" }
+camera-lifecycle-v110alpha05 = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraLifecycleVersion" }
+camera-view-v100alpha32 = { module = "androidx.camera:camera-view", version.ref = "cameraViewVersion" }
+compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+guava = { module = "com.google.guava:guava", version.ref = "guava" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -29,6 +53,12 @@ firebase-database = { group = "com.google.firebase", name = "firebase-database",
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
+pytorch_android_lite = { module = "org.pytorch:pytorch_android_lite", version.ref = "pytorch_android_torchvision_lite" }
+pytorch_android_torchvision_lite = { module = "org.pytorch:pytorch_android_torchvision_lite", version.ref = "pytorch_android_torchvision_lite" }
+webkit = { group = "androidx.webkit", name = "webkit", version.ref = "webkit" }
+camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraView" }
+camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraLifecycle" }
+firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
