--- a/payapa.android/gradle/libs.versions.toml
+++ b/payapa.android/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ webkit = "1.12.1"
 cameraView = "1.3.4"
 cameraLifecycle = "1.3.4"
 firebaseCrashlyticsBuildtools = "3.0.2"
+gson = "2.8.8"
 
 [libraries]
 androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraLifecycleVersion" }
@@ -59,6 +60,7 @@ webkit = { group = "androidx.webkit", name = "webkit", version.ref = "webkit" }
 camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "cameraView" }
 camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "cameraLifecycle" }
 firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
