--- a/payapa.android/app/src/main/AndroidManifest.xml
+++ b/payapa.android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -19,7 +18,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Payapa">
+        android:theme="@style/Theme.Payapa"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".QuestionActivity"
+            android:exported="false" />
         <activity
             android:name=".NextQuestionActivity"
             android:exported="false" />
