add result and suggestion view

--- a/payapa.android/app/src/main/AndroidManifest.xml
+++ b/payapa.android/app/src/main/AndroidManifest.xml
@@ -63,6 +63,9 @@
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
+            android:name=".SuggestionActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainDetectActivity"
             android:exported="false" />
         <activity
