--- a/payapa.web/package.json
+++ b/payapa.web/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^6.1.4",
     "bootstrap": "^5.3.3",
     "firebase": "^10.14.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
