--- a/payapa.android/app/src/main/AndroidManifest.xml
+++ b/payapa.android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
             android:name=".AppoinmentActivity"
             android:exported="false" />
         <activity
+            android:name=".ScheduledAppointmentActivity"
+            android:exported="false" />
+        <activity
             android:name=".ConsultationActivity"
             android:exported="false" />
         <activity
